# awsipinventory

./: .dockerignore  .editorconfig  .gitignore  .gitpod.yml  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  Pipfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codeql-analysis.yml  pylint.yml  pypi.yaml
awsipinventory/: __init__.py  __main__.py
awsipinventory/discovery/: __init__.py  ec2.py
awsipinventory/templates/: inventory.html
