[tool.poetry]
name = "awsipinventory"
description = "Tool to generate an inventory of all IP addresses in use in an account, one or multiple VPC, or one or multiple subnet."
version = "0.6.3"
authors = ["Juan A. S. <okelet@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/okelet/awsipinventory"
repository = "https://github.com/okelet/awsipinventory"
documentation = "https://github.com/okelet/awsipinventory"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.22.0"
tabulate = "^0.8.9"
Jinja2 = "^3.1.1"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
awsipinventory = 'awsipinventory:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
