[tool.poetry]
name = "awsipinventory"
description = "Tool to generate an inventory of all IP addresses in use in an account, one or multiple VPC, or one or multiple subnet."
version = "0.6.3"
authors = ["Juan A. S. <okelet@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/okelet/awsipinventory"
repository = "https://github.com/okelet/awsipinventory"
documentation = "https://github.com/okelet/awsipinventory"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.22.0"
tabulate = "^0.8.9"
Jinja2 = "^3.1.1"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.950"
pylint = "^2.13.8"
flake8 = "^4.0.1"

[tool.poetry.scripts]
awsipinventory = "awsipinventory:cli"

[tool.black]
line-length = 999

[tool.isort]
line_length = 999

[tool.pylint.format]
max-line-length = 999

[tool.pylint.master]
extension-pkg-whitelist = "pydantic,PySide6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
