[tool.poetry]
authors = ["Juan A. S. <okelet@gmail.com>"]
description = "Tool to generate an inventory of all IP addresses in use in an account, one or multiple VPC, or one or multiple subnet."
documentation = "https://github.com/okelet/awsipinventory"
homepage = "https://github.com/okelet/awsipinventory"
name = "awsipinventory"
readme = "README.md"
repository = "https://github.com/okelet/awsipinventory"
version = "0.6.3"

[tool.poetry.dependencies]
Jinja2 = "^3.1.1"
PyYAML = "^6.0"
boto3 = "^1.22.0"
boto3-stubs = {extras = ["all"], version = "^1.22.13"}
python = "^3.10"
tabulate = "^0.8.9"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.950"
pre-commit = "^2.19.0"
pylint = "^2.13.8"
types-PyYAML = "^6.0.7"
types-tabulate = "^0.8.9"

[tool.poetry.scripts]
awsipinventory = "awsipinventory:cli"

[tool.black]
line-length = 999

[tool.isort]
line_length = 999

[tool.pylint.format]
max-line-length = 999

[tool.pylint.master]
extension-pkg-whitelist = "pydantic,PySide6"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
